--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "esModuleInterop": true,        // Add this line
+    "allowSyntheticDefaultImports": true,  // Optionally add this line as well
     "paths": {
       "@/*": [
         "./*"
